@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-24 Kimmo
+ PATCH: [ 1545411 ] Add some missing options to configlog
+  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp
+
 2006-08-23 Kimmo
  PATCH: [ 1544905 ] Use stat() to check if file is read-only
   Src: files.cpp files.h
